--- a/game2.html
+++ b/game2.html
@@ -86,7 +86,7 @@
                             <div class="winandlose" style="font-family: system-ui;">
                                 <span class="progress-bar"></span>
                                 <span class="win">925 WINS</span>
-                                <span class="lose">791 LOST</span>
+                                <span class="lose">791 LOSE</span>
                             </div>
                             <div class="one_row">
                                 <span class="kills">
